[TASK] remove unused files

--- a/Resources/Private/Templates/TtContent/st_addressmap.html
+++ b/Resources/Private/Templates/TtContent/st_addressmap.html
@@ -1,9 +1,7 @@
 <div id="c{data.uid}"
 	 class="staddressmap"
 	 data-staddressmap-height="{data.tx_staddressmap_st_addressmap_mapheight}"
-	 data-staddressmap-startzoom="{data.tx_staddressmap_st_addressmap_startzoom}"
-	 data-staddressmap-detailzoom="{data.tx_staddressmap_st_addressmap_detailzoom}"
-	 data-staddressmap-centercoordinates="{data.tx_staddressmap_st_addressmap_centercoordinates}">
+	 data-staddressmap-googleapikey="{settings.tx_staddressmap.googleApiKey.value}">
 	<div class="staddressmap__filter">
 		<input class="staddressmap__searchfrompoint" placeholder="PLZ oder Stadt" value="" type="text">
 		<select class="staddressmap__searchradius" size="1">
