[TASK] add simple styling and display the map is only one address is displayed
Resolved: https://github.com/scheibome/st_address_map/issues/7

--- a/Resources/Private/Source/Sass/staddressmap.scss
+++ b/Resources/Private/Source/Sass/staddressmap.scss
@@ -5,4 +5,11 @@
     margin: 0 0 1rem 0;
     padding: 1rem;
   }
+
+  &__searchfrompoint,
+  &__searchradius {
+    display: block;
+    padding: 10px;
+    width: 400px;
+  }
 }
