--- a/Resources/Public/Stylesheets/staddressmap.css
+++ b/Resources/Public/Stylesheets/staddressmap.css
@@ -1,1 +1,1 @@
-.staddressmap .vcard{background-color:#e5e5e5;margin:0 0 1rem 0;padding:1rem}
+.staddressmap .vcard{background-color:#e5e5e5;margin:0 0 1rem 0;padding:1rem}.staddressmap__searchfrompoint,.staddressmap__searchradius{display:block;padding:10px;width:400px}
