[TASK] fix infowindow position by click on marker

--- a/Resources/Private/Templates/TtAddress/addressmap.html
+++ b/Resources/Private/Templates/TtAddress/addressmap.html
@@ -42,10 +42,11 @@ Markers you can use:
 	 itemscope itemtype="http://schema.org/Person"
 	 data-staddressmap-latitude="<!-- ###SUBPART_LATITUDE### begin --><!-- ###SUBPART_LATITUDE### end -->"
 	 data-staddressmap-longitude="<!-- ###SUBPART_LONGITUDE### begin --><!-- ###SUBPART_LONGITUDE### end -->"
+	 data-staddressmap-markertitle="<!-- ###SUBPART_MARKERTITLE### begin --><!-- ###SUBPART_MARKERTITLE### end -->"
 	 data-mapmarkercontent="1">
 	###IMAGE###
 	<!-- ###SUBPART_URL### begin -->
-	###FIRSTNAME### ###MIDDLENAME### ###LASTNAME###
+	###FIRSTNAME### ###MIDDLENAME### ###LASTNAME###</span>
 	<!-- ###SUBPART_URL### end -->
 	###ORGANIZATION###
 	###EMAIL###
