[TASK] add markercontent selector

--- a/Resources/Private/Templates/TtAddress/addressmap.html
+++ b/Resources/Private/Templates/TtAddress/addressmap.html
@@ -43,6 +43,7 @@ Markers you can use:
 	 data-staddressmap-latitude="<!-- ###SUBPART_LATITUDE### begin --><!-- ###SUBPART_LATITUDE### end -->"
 	 data-staddressmap-longitude="<!-- ###SUBPART_LONGITUDE### begin --><!-- ###SUBPART_LONGITUDE### end -->"
 	 data-staddressmap-markertitle="<!-- ###SUBPART_MARKERTITLE### begin --><!-- ###SUBPART_MARKERTITLE### end -->"
+	 data-mapmarkeritem="1"
 	 data-mapmarkercontent="1">
 	###IMAGE###
 	<!-- ###SUBPART_URL### begin -->
