[TASK] add markerclustering

--- a/Resources/Private/Templates/TtAddress/addressmap.html
+++ b/Resources/Private/Templates/TtAddress/addressmap.html
@@ -47,14 +47,14 @@ Markers you can use:
 	 data-mapmarkercontent="1">
 	###IMAGE###
 	<!-- ###SUBPART_URL### begin -->
-	###FIRSTNAME### ###MIDDLENAME### ###LASTNAME###</span>
+	###FIRSTNAME### ###MIDDLENAME### ###LASTNAME###
 	<!-- ###SUBPART_URL### end -->
 	###ORGANIZATION###
-	###EMAIL###
 	<!-- ###SUBPART_ADR### begin -->
 	<div class="adr" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 		###ADDRESS###
-		###CITY### ###REGION### ###ZIP### ###COUNTRY###
+		###CITY### ###ZIP###<br />
+		###COUNTRY###
 	</div>
 	<!-- ###SUBPART_ADR### end -->
 	###PHONE###
