--- a/Resources/Private/Source/Sass/staddressmap.scss
+++ b/Resources/Private/Source/Sass/staddressmap.scss
@@ -6,6 +6,13 @@
     padding: 1rem;
   }
 
+  .gm-style {
+    .vcard {
+      background-color: transparent;
+      margin: 0;
+    }
+  }
+
   &__searchfrompoint,
   &__searchradius {
     display: block;
