--- a/Resources/Private/Templates/TtContent/st_address_map.html
+++ b/Resources/Private/Templates/TtContent/st_address_map.html
@@ -1,6 +1,6 @@
 <div id="c{data.uid}"
 	 class="staddressmap"
-	 data-staddressmap-googleapikey="{settings.tx_staddressmap.googleApiKey.value}">
+	 data-staddressmap-googleapikey="{settings.tx_staddressmap.googleApiKey}">
 	<div class="staddressmap__googlemap" style="height: {data.tx_staddressmap_mapheight};"></div>
 	<div class="staddressmap__filter">
 		<input class="staddressmap__searchfrompoint" placeholder="PLZ oder Stadt" value="" type="text">
