--- a/Resources/Private/Source/Sass/staddressmap.scss
+++ b/Resources/Private/Source/Sass/staddressmap.scss
@@ -1,4 +1,14 @@
+$oslogrey: #7F8C8D;
+$whitesmoke: #EEEEEE;
+$white: #FFFFFF;
+$summersky: #3498DB;
+
+
 .staddressmap {
+
+  * {
+    box-sizing: border-box;
+  }
 
   &__hiddenlistitem {
     display: none;
@@ -12,10 +22,94 @@
     }
   }
 
+  &__filter {
+    margin: 2em 0 0 0;
+  }
+
+  &__input,
+  &__select {
+    border: 1px solid $oslogrey;
+    box-shadow: none;
+    display: block;
+    padding: 1em;
+    color: $oslogrey;
+    background-color: $whitesmoke;
+    border-radius: 2px;
+    width: 100%;
+    margin: 0 0 1em 0;
+  }
+
+  &__select {
+    background-image: none;
+    outline: none;
+    appearance: none;
+    &::-ms-expand {
+      display: none
+    };
+
+    option {
+      line-height: 100px;
+    }
+  }
+
+  &__selectfield {
+    position: relative;
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 50%;
+      margin-top: -0.5em;
+      right: 1em;
+      background-color: transparent;
+      border-color: $oslogrey;
+      border-image: none;
+      border-style: solid;
+      border-width: 0 0 0.05em 0.05em;
+      height: 0.7em;
+      width: 0.7em;
+      transform: rotate(-45deg) scale(1);
+    }
+  }
+
+  &__button {
+    border: 0 none;
+    border-radius: 2px;
+    color: $white;
+    cursor: pointer;
+    display: inline-block;
+    padding: 1em;
+    text-transform: none;
+    background-color: $summersky;
+    margin: 0 0 1em 0;
+  }
+
+  .tx-ttaddress-pi1 {
+
+    @media (min-width: 600px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+  }
+
   .vcard {
-    background-color: #e5e5e5;
+    background-color: $whitesmoke;
     margin: 0 0 1rem 0;
     padding: 1rem;
+
+    @media (min-width: 600px) {
+      width: 49%;
+    }
+
+    @media (min-width: 1000px) {
+      width: 32%;
+    }
+
+    @media (min-width: 1700px) {
+      width: 24%;
+    }
   }
 
   .gm-style {
@@ -23,12 +117,5 @@
       background-color: transparent;
       margin: 0;
     }
-  }
-
-  &__searchfrompoint,
-  &__searchradius {
-    display: block;
-    padding: 10px;
-    width: 400px;
   }
 }
