--- a/Resources/Private/Templates/TtContent/st_address_map.html
+++ b/Resources/Private/Templates/TtContent/st_address_map.html
@@ -1,7 +1,8 @@
 <div id="c{data.uid}"
 	 class="staddressmap"
-	 data-staddressmap-googleapikey="{settings.tx_staddressmap.googleApiKey}">
-	<div class="staddressmap__googlemap" style="height: {data.tx_staddressmap_mapheight};"></div>
+	 data-staddressmap-apikey="{settings.tx_staddressmap.apiKey}"
+	 data-staddressmap-webmapservices="{settings.tx_staddressmap.webMapServices}">
+	<div class="staddressmap__map" style="height: {data.tx_staddressmap_mapheight};"></div>
 	<div class="staddressmap__filter">
 		<input class="staddressmap__input staddressmap__searchfrompoint" placeholder="PLZ oder Stadt" value="" type="text">
 		<div class="staddressmap__selectfield">
