[WIP] style infowindow

--- a/Resources/Private/Partials/binginfowindow.html
+++ b/Resources/Private/Partials/binginfowindow.html
@@ -4,10 +4,10 @@
 	</a>
 	<div class="infobox-body" style="max-width: 256px; max-height: 126px; width: 173px;">
 		<div class="infobox-title">
-			<h1>jooo</h1>{title}
+			###title###
 		</div>
 		<div class="infobox-info">
-			<div>{description}</div>
+			<div>###description###</div>
 		</div>
 		<div class="infobox-actions" style="display: none;">
 			<ul class="infobox-actions-list">
